# sqlift

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-analyzer.toml
docs/: postgres.md
src/: config.rs  error.rs  lib.rs  main.rs  schema.rs
src/codegen/: mod.rs
src/codegen/python/: mod.rs
src/codegen/python/templates/: enum.py.jinja  flat.py.jinja  init.py.jinja  record.py.jinja  repository.py.jinja  standalone.py.jinja  types.py.jinja
src/introspect/: mod.rs  postgres.rs
